# serializer version: 1
# name: test_build_prompt_snapshot
  '''
  Return JSON only.
  {
    "task": "Review the canonical TEI script and decide which enabled generation-enrichment actions should run.",
    "response_schema": {
      "plan_version": "string",
      "steps": [
        {
          "action_id": "string",
          "action_kind": [
            "generate_show_notes"
          ],
          "rationale": "string",
          "model_tier": [
            "planning",
            "execution"
          ],
          "required_inputs": [
            "string"
          ]
        }
      ]
    },
    "enabled_action_kinds": [
      "generate_show_notes"
    ],
    "correlation_id": "snap-001",
    "script_tei_xml": "<TEI><text>test</text></TEI>"
  }
  '''
# ---
# name: test_checkpoint_payload_snapshot
  dict({
    'action_result': dict({
      'action_id': 'a1',
      'action_kind': 'generate_show_notes',
      'model': 'gpt-4o-mini',
      'model_tier': 'execution',
      'summary': 'test',
      'usage': dict({
        'input_tokens': 10,
        'output_tokens': 20,
        'total_tokens': 30,
      }),
    }),
    'planner_result': dict({
      'finish_reason': 'stop',
      'model': 'gpt-4.1',
      'plan': dict({
        'plan_version': '1',
        'selected_execution_model': 'gpt-4o-mini',
        'selected_planning_model': 'gpt-4.1',
        'steps': list([
          dict({
            'action_id': 'a1',
            'action_kind': 'generate_show_notes',
            'model_tier': 'execution',
            'rationale': 'test',
            'required_inputs': list([
              'script_tei_xml',
            ]),
          }),
        ]),
      }),
      'provider_response_id': 'planner-1',
      'usage': dict({
        'input_tokens': 1,
        'output_tokens': 2,
        'total_tokens': 3,
      }),
    }),
  })
# ---
# name: test_execution_plan_serialisation_snapshot
  dict({
    'plan_version': '1',
    'selected_execution_model': 'gpt-4o-mini',
    'selected_planning_model': 'gpt-4.1',
    'steps': tuple(
      dict({
        'action_id': 'a1',
        'action_kind': <ActionKind.GENERATE_SHOW_NOTES: 'generate_show_notes'>,
        'model_tier': <ModelTier.EXECUTION: 'execution'>,
        'rationale': 'test',
        'required_inputs': tuple(
        ),
      }),
    ),
  })
# ---
# name: test_generation_orchestration_result_snapshot
  dict({
    'action_results': tuple(
      dict({
        'action_id': 'a1',
        'action_kind': <ActionKind.GENERATE_SHOW_NOTES: 'generate_show_notes'>,
        'guest_bios_result': None,
        'model': 'gpt-4o-mini',
        'model_tier': <ModelTier.EXECUTION: 'execution'>,
        'show_notes_result': None,
        'summary': 'test',
        'usage': dict({
          'input_tokens': 10,
          'output_tokens': 20,
          'total_tokens': 30,
        }),
      }),
    ),
    'plan': dict({
      'plan_version': '1',
      'selected_execution_model': 'gpt-4o-mini',
      'selected_planning_model': 'gpt-4.1',
      'steps': tuple(
        dict({
          'action_id': 'a1',
          'action_kind': <ActionKind.GENERATE_SHOW_NOTES: 'generate_show_notes'>,
          'model_tier': <ModelTier.EXECUTION: 'execution'>,
          'rationale': 'test',
          'required_inputs': tuple(
          ),
        }),
      ),
    }),
    'planner_usage': dict({
      'input_tokens': 1,
      'output_tokens': 2,
      'total_tokens': 3,
    }),
    'total_usage': dict({
      'input_tokens': 11,
      'output_tokens': 22,
      'total_tokens': 33,
    }),
  })
# ---
# name: test_planner_format_error_messages_snapshot
  dict({
    'missing_action_id': 'action_id must be a non-empty string.',
    'missing_plan_version': 'plan_version must be a non-empty string.',
    'non_list_required_inputs': 'required_inputs must be a list of strings.',
    'non_list_steps': 'steps must be a list.',
    'non_object_step': 'step must be an object.',
    'unknown_action_kind': 'action_kind must be one of: generate_show_notes, generate_guest_bios.',
    'unknown_model_tier': 'model_tier must be one of: planning, execution.',
  })
# ---
